Better solution